# metri

./: .gitignore  IMPLEMENTATION_PLAN.md  Makefile  README.md  metri.spec  pyproject.toml
.github/workflows/: ci.yml  release.yml
skills/: SKILL.md
src/metricli/: __main__.py  db.py
tests/: test_cli.py  test_db.py
